<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Liga 5 EST SJ</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome_message">Welcome to League 5 !</string>
    <string name="log_in">Log in</string>
    <string name="register_here"><u>Register here</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lowercase_character">lowercase character is not present</string>
    <string name="uppercase_character">uppercase character is not present</string>
    <string name="digit_character">digit is not present</string>
    <string name="password_length">password length is less than 8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">430759430328-p6j34b6oeje6di4l1r0la4cnlmgtfmea.apps.googleusercontent.com</string>


</resources>